@@ -209,6 +209,9 @@ table {
   border: 0;
 }
 
+/**
+ * main menu
+ */
 .mainmenu {
   color: #000000;
   background-color: #0099CC;
@@ -255,6 +258,37 @@ table {
 .mainmenu ul li.selected span {
   color: #000000;
 }
+
+/**
+ * sub menu
+ */
+.submenu {
+  background-color: #006699;
+}
+
+.submenu ul {
+  margin: 0;
+  padding: 1px 0 1px 0;
+  list-style-type: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: smaller;
+  font-weight: bold;
+}
+
+.submenu ul li {
+  display: inline;
+}
+
+.submenu ul li a,
+.submenu ul li span {
+  padding: 0 2em 0 2em;
+}
+
+.submenu a:link { color:white; text-decoration:none; }
+.submenu a:visited { color:white; text-decoration:none; }
+.submenu a:focus { color:white; text-decoration:underline; }
+.submenu a:hover { color:white; text-decoration:underline; }
+.submenu a:active { color:white; text-decoration:underline; }
 
 div.messageSummary {
   background-color: #006699;
