@@ -202,6 +202,9 @@ table {
   border: 0;
 }
 
+/**
+ * main menu
+ */
 .mainmenu {
   background-color: #99CCFF;
 }
@@ -236,6 +239,36 @@ table {
   background-color: #FFC061;
   border: 1px dashed #222222;
 }
+
+/**
+ * sub menu
+ */
+.submenu {
+  background-color: #002266;
+}
+
+.submenu ul {
+  margin: 0;
+  padding: 1px 0 1px 0;
+  list-style-type: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: smaller;
+}
+
+.submenu ul li {
+  display: inline;
+}
+
+.submenu ul li a,
+.submenu ul li span {
+  padding: 0 2em 0 2em;
+}
+
+.submenu a:link { color:white; text-decoration:none; }
+.submenu a:visited { color:white; text-decoration:none; }
+.submenu a:focus { color:white; text-decoration:underline; }
+.submenu a:hover { color:white; text-decoration:underline; }
+.submenu a:active { color:white; text-decoration:underline; }
 
 div.messageSummary {
   background-color: #002266;
